{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 6,
  "lineage": "8a69b423-9bc2-b481-1c8b-ed8669a040c2",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_app_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000",
                  "5432",
                  "6000",
                  "6379",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-05T22:24:54.851-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/schema-478207/global/firewalls/schemalabs-allow-app-ports",
            "log_config": [],
            "name": "schemalabs-allow-app-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/schema-478207/global/networks/default",
            "priority": 1000,
            "project": "schema-478207",
            "self_link": "https://www.googleapis.com/compute/v1/projects/schema-478207/global/firewalls/schemalabs-allow-app-ports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-19T10:14:41.129-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/schema-478207/global/firewalls/default-allow-http",
            "log_config": [],
            "name": "default-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/schema-478207/global/networks/default",
            "priority": 1000,
            "project": "schema-478207",
            "self_link": "https://www.googleapis.com/compute/v1/projects/schema-478207/global/firewalls/default-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-19T10:14:41.028-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/schema-478207/global/firewalls/default-allow-https",
            "log_config": [],
            "name": "default-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/schema-478207/global/networks/default",
            "priority": 1000,
            "project": "schema-478207",
            "self_link": "https://www.googleapis.com/compute/v1/projects/schema-478207/global/firewalls/default-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "schemalabsai",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": false,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2404-noble-amd64-v20251217",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 500,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/schema-478207/zones/us-central1-b/disks/schemalabsai-prod"
              }
            ],
            "can_ip_forward": false,
            "confidential_instance_config": [
              {
                "enable_confidential_compute": false
              }
            ],
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ops-agent-policy": "v2-x86-template-1-4-0"
            },
            "enable_display": false,
            "guest_accelerator": [
              {
                "count": 1,
                "type": "https://www.googleapis.com/compute/v1/projects/schema-478207/zones/us-central1-b/acceleratorTypes/nvidia-tesla-t4"
              }
            ],
            "id": "projects/schema-478207/zones/us-central1-b/instances/schemalabsai-prod-gpu001",
            "instance_id": "5190738653436867811",
            "label_fingerprint": "pzBpbdzjubE=",
            "machine_type": "n1-standard-8",
            "metadata": {
              "enable-osconfig": "TRUE",
              "serial-port-enable": "TRUE",
              "ssh-keys": "ozer:ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBFY2v9K7QMMQHnkDphl2PJIDf4jrmf6AANP8X1/nyDhPiyNEGm+oELm42lbjT5c5EFLRh00EoM5q/+OPUr1WKAI= google-ssh {\"userName\":\"ozer@schemalabs.ai\",\"expireOn\":\"2026-02-13T12:28:40+0000\"}\nozer:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCZ7PfKDi2wdarlprcewSQ0aEfKNow/KxkCLsj4fAKpgZLKeTS9Rz6jlkOlJTcTCmuXxSOaZqzTwQEv0upFdGFW+/rQ9HvFcbRfbOyZKveDY13IOHkwsX2t/2Nsy+ToxCpkLlsV64jLymxBuOeBWZO0Ed0ri11pUoaYrsh0BHSss4 [...]
            },
            "metadata_fingerprint": "GyFBpoOTFtw=",
            "name": "schemalabsai-prod-gpu001",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.9.180.204",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/schema-478207/global/networks/default",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/schema-478207/regions/us-central1/subnetworks/default",
                "subnetwork_project": "schema-478207"
              }
            ],
            "project": "schema-478207",
            "reservation_affinity": [
              {
                "type": "ANY_RESERVATION"
              }
            ],
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/schema-478207/zones/us-central1-b/instances/schemalabsai-prod-gpu001",
            "service_account": [
              {
                "email": "736469751674-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_disk.boot_disk"
          ]
        }
      ]
    }
  ]
}